crates/talkbank-parser-tests/src/snapshots/talkbank_parser_tests__snapshot__tur-conversation.snap
---
source: crates/talkbank-parser-tests/src/snapshot.rs
expression: snapshot
---
{
  "languages": [
    "tur"
  ],
  "lines": [
    {
      "header": {
        "type": "utf8"
      },
      "line_type": "header"
    },
    {
      "header": {
        "type": "begin"
      },
      "line_type": "header"
    },
    {
      "header": {
        "codes": [
          "tur"
        ],
        "type": "languages"
      },
      "line_type": "header"
    },
    {
      "header": {
        "entries": [
          {
            "name": "ME",
            "role": "Target_Child",
            "speaker_code": "CHI"
          }
        ],
        "type": "participants"
      },
      "line_type": "header"
    },
    {
      "header": {
        "age": "9;11.",
        "corpus": "corpus",
        "language": [
          "tur"
        ],
        "role": "Target_Child",
        "speaker": "CHI",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "content": {
          "segments": [
            {
              "text": "Turkish child frog story narrative",
              "type": "text"
            }
          ]
        },
        "type": "comment"
      },
      "line_type": "header"
    },
    {
      "header": {
        "content": {
          "segments": [
            {
              "text": "Constructs: Turkish language coverage, Latin script",
              "type": "text"
            }
          ]
        },
        "type": "comment"
      },
      "line_type": "header"
    },
    {
      "dependent_tiers": [
        {
          "data": {
            "items": [
              {
                "main": {
                  "features": [
                    "Nom"
                  ],
                  "lemma": "cocuk",
                  "pos": "noun"
                }
              },
              {
                "main": {
                  "features": [
                    "Def"
                  ],
                  "lemma": "bir",
                  "pos": "det"
                }
              },
              {
                "main": {
                  "features": [
                    "Nom"
                  ],
                  "lemma": "kurbaga",
                  "pos": "noun"
                }
              },
              {
                "main": {
                  "features": [
                    "Inf",
                    "Prog",
                    "Ind",
                    "Pres",
                    "Pos",
                    "Infm",
                    "S3"
                  ],
                  "lemma": "yakal",
                  "pos": "verb"
                }
              }
            ],
            "terminator": {
              "type": "period"
            },
            "tier_type": "Mor"
          },
          "type": "Mor"
        },
        {
          "data": {
            "relations": [
              {
                "head": 4,
                "index": 1,
                "relation": "NSUBJ"
              },
              {
                "head": 3,
                "index": 2,
                "relation": "DET"
              },
              {
                "head": 4,
                "index": 3,
                "relation": "OBJ"
              },
              {
                "head": 0,
                "index": 4,
                "relation": "ROOT"
              },
              {
                "head": 4,
                "index": 5,
                "relation": "PUNCT"
              }
            ],
            "tier_type": "Gra"
          },
          "type": "Gra"
        }
      ],
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "cleaned_text": "cocuk",
              "content": [
                {
                  "content": "cocuk",
                  "type": "text"
                }
              ],
              "raw_text": "cocuk",
              "type": "word"
            },
            {
              "cleaned_text": "bir",
              "content": [
                {
                  "content": "bir",
                  "type": "text"
                }
              ],
              "raw_text": "bir",
              "type": "word"
            },
            {
              "cleaned_text": "kurbaga",
              "content": [
                {
                  "content": "kurbaga",
                  "type": "text"
                }
              ],
              "raw_text": "kurbaga",
              "type": "word"
            },
            {
              "cleaned_text": "yakaliyor",
              "content": [
                {
                  "content": "yakaliyor",
                  "type": "text"
                }
              ],
              "raw_text": "yakaliyor",
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "dependent_tiers": [
        {
          "data": {
            "items": [
              {
                "main": {
                  "features": [
                    "Nom"
                  ],
                  "lemma": "kurbaga",
                  "pos": "noun"
                }
              },
              {
                "main": {
                  "features": [
                    "Inf",
                    "Prog",
                    "Ind",
                    "Pres",
                    "Pos",
                    "Infm",
                    "S3"
                  ],
                  "lemma": "kac",
                  "pos": "verb"
                }
              }
            ],
            "terminator": {
              "type": "period"
            },
            "tier_type": "Mor"
          },
          "type": "Mor"
        },
        {
          "data": {
            "relations": [
              {
                "head": 2,
                "index": 1,
                "relation": "NSUBJ"
              },
              {
                "head": 0,
                "index": 2,
                "relation": "ROOT"
              },
              {
                "head": 2,
                "index": 3,
                "relation": "PUNCT"
              }
            ],
            "tier_type": "Gra"
          },
          "type": "Gra"
        }
      ],
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "cleaned_text": "kurbaga",
              "content": [
                {
                  "content": "kurbaga",
                  "type": "text"
                }
              ],
              "raw_text": "kurbaga",
              "type": "word"
            },
            {
              "cleaned_text": "kaciyor",
              "content": [
                {
                  "content": "kaciyor",
                  "type": "text"
                }
              ],
              "raw_text": "kaciyor",
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "dependent_tiers": [
        {
          "data": {
            "items": [
              {
                "main": {
                  "features": [
                    "Nom"
                  ],
                  "lemma": "cocuk",
                  "pos": "noun"
                }
              },
              {
                "main": {
                  "features": [
                    "Nom"
                  ],
                  "lemma": "sabah",
                  "pos": "noun"
                }
              },
              {
                "main": {
                  "lemma": "kalkinca",
                  "pos": "adv"
                }
              }
            ],
            "terminator": {
              "type": "period"
            },
            "tier_type": "Mor"
          },
          "type": "Mor"
        },
        {
          "data": {
            "relations": [
              {
                "head": 3,
                "index": 1,
                "relation": "NSUBJ"
              },
              {
                "head": 3,
                "index": 2,
                "relation": "NMOD"
              },
              {
                "head": 0,
                "index": 3,
                "relation": "ROOT"
              },
              {
                "head": 3,
                "index": 4,
                "relation": "PUNCT"
              }
            ],
            "tier_type": "Gra"
          },
          "type": "Gra"
        }
      ],
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "cleaned_text": "cocuk",
              "content": [
                {
                  "content": "cocuk",
                  "type": "text"
                }
              ],
              "raw_text": "cocuk",
              "type": "word"
            },
            {
              "cleaned_text": "sabah",
              "content": [
                {
                  "content": "sabah",
                  "type": "text"
                }
              ],
              "raw_text": "sabah",
              "type": "word"
            },
            {
              "cleaned_text": "kalkinca",
              "content": [
                {
                  "content": "kalkinca",
                  "type": "text"
                }
              ],
              "raw_text": "kalkinca",
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "dependent_tiers": [
        {
          "data": {
            "items": [
              {
                "main": {
                  "features": [
                    "S1"
                  ],
                  "lemma": "cesitli",
                  "pos": "adj"
                }
              },
              {
                "main": {
                  "features": [
                    "Plur",
                    "Acc"
                  ],
                  "lemma": "hayvan",
                  "pos": "noun"
                }
              },
              {
                "main": {
                  "features": [
                    "Nom"
                  ],
                  "lemma": "kurbaga",
                  "pos": "noun"
                }
              },
              {
                "main": {
                  "features": [
                    "Inf",
                    "Prog",
                    "Ind",
                    "Pres",
                    "Pos",
                    "Infm",
                    "S3"
                  ],
                  "lemma": "zannet",
                  "pos": "verb"
                }
              }
            ],
            "terminator": {
              "type": "period"
            },
            "tier_type": "Mor"
          },
          "type": "Mor"
        },
        {
          "data": {
            "relations": [
              {
                "head": 2,
                "index": 1,
                "relation": "AMOD"
              },
              {
                "head": 4,
                "index": 2,
                "relation": "OBJ"
              },
              {
                "head": 4,
                "index": 3,
                "relation": "OBJ"
              },
              {
                "head": 0,
                "index": 4,
                "relation": "ROOT"
              },
              {
                "head": 4,
                "index": 5,
                "relation": "PUNCT"
              }
            ],
            "tier_type": "Gra"
          },
          "type": "Gra"
        }
      ],
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "cleaned_text": "cesitli",
              "content": [
                {
                  "content": "cesitli",
                  "type": "text"
                }
              ],
              "raw_text": "cesitli",
              "type": "word"
            },
            {
              "cleaned_text": "hayvanlari",
              "content": [
                {
                  "content": "hayvanlari",
                  "type": "text"
                }
              ],
              "raw_text": "hayvanlari",
              "type": "word"
            },
            {
              "cleaned_text": "kurbaga",
              "content": [
                {
                  "content": "kurbaga",
                  "type": "text"
                }
              ],
              "raw_text": "kurbaga",
              "type": "word"
            },
            {
              "cleaned_text": "zannediyor",
              "content": [
                {
                  "content": "zannediyor",
                  "type": "text"
                }
              ],
              "raw_text": "zannediyor",
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "dependent_tiers": [
        {
          "data": {
            "items": [
              {
                "main": {
                  "features": [
                    "Loc"
                  ],
                  "lemma": "su",
                  "pos": "noun"
                }
              },
              {
                "main": {
                  "features": [
                    "Acc"
                  ],
                  "lemma": "kurbaga",
                  "pos": "noun"
                }
              },
              {
                "main": {
                  "features": [
                    "Inf",
                    "Prog",
                    "Ind",
                    "Pres",
                    "Pos",
                    "Infm",
                    "S3"
                  ],
                  "lemma": "bul",
                  "pos": "verb"
                }
              }
            ],
            "terminator": {
              "type": "period"
            },
            "tier_type": "Mor"
          },
          "type": "Mor"
        },
        {
          "data": {
            "relations": [
              {
                "head": 3,
                "index": 1,
                "relation": "OBL"
              },
              {
                "head": 3,
                "index": 2,
                "relation": "OBJ"
              },
              {
                "head": 0,
                "index": 3,
                "relation": "ROOT"
              },
              {
                "head": 3,
                "index": 4,
                "relation": "PUNCT"
              }
            ],
            "tier_type": "Gra"
          },
          "type": "Gra"
        }
      ],
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "cleaned_text": "suda",
              "content": [
                {
                  "content": "suda",
                  "type": "text"
                }
              ],
              "raw_text": "suda",
              "type": "word"
            },
            {
              "cleaned_text": "kurbagayi",
              "content": [
                {
                  "content": "kurbagayi",
                  "type": "text"
                }
              ],
              "raw_text": "kurbagayi",
              "type": "word"
            },
            {
              "cleaned_text": "buluyor",
              "content": [
                {
                  "content": "buluyor",
                  "type": "text"
                }
              ],
              "raw_text": "buluyor",
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "header": {
        "type": "end"
      },
      "line_type": "header"
    }
  ],
  "options": [],
  "participants": {
    "CHI": {
      "birth_date": null,
      "code": "CHI",
      "id": {
        "age": "9;11.",
        "corpus": "corpus",
        "language": [
          "tur"
        ],
        "role": "Target_Child",
        "speaker": "CHI"
      },
      "name": "ME",
      "role": "Target_Child"
    }
  }
}
